Stop `<Modal />`s, with overflow, from sticking when scrolling

--- a/components/Modal/Window.css
+++ b/components/Modal/Window.css
@@ -8,12 +8,38 @@
   color: var(--color-white);
 }
 
-.body {
-  max-height: calc(100vh - 66px);
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
-  overflow-y: scroll;
+.root {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
   -webkit-overflow-scrolling: touch;
-  padding: var(--size-large);
   clear: both;
+  z-index: var(--z-modal);
+}
+
+@media(--modal-lg) {
+  .root {
+    width: 94vw;
+    max-height: 94vh;
+    max-width: 37.5rem;
+    height: auto;
+    left: 50%;
+    top: 50%;
+    bottom: auto;
+    transform: translate3d(-50%, -50%, 0);
+    border-radius: 4px;
+  }
+}
+
+.body {
+  width: 100%;
+  height: 100%;
+  max-height: 94vh;
+  padding: var(--size-large);
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
