--- a/components/Modal/WithTitleBar.css
+++ b/components/Modal/WithTitleBar.css
@@ -12,9 +12,3 @@
 .body {
   padding-top: var(--space-96);
 }
-
-@media(--modal-lg) {
-  .body {
-    padding-bottom: var(--space-96);
-  }
-}
